calorie_count/src/components/header/header.css
.Header {
  /* background-color: #222; */
  background:linear-gradient(rgb(11, 69, 87),rgb(10, 56, 70));
  height: 60px;
  padding:10px;
  color: white;
  display:flex;
  justify-content: space-between;
  
}
nav{
  width:80%;
}
.navElements{
  display:flex;
  justify-content: space-around;
}
.navElements li{
  font-family: 'Lato', cursive;
  list-style: none;
  margin:1.2rem 4rem;
}
.navElements a{
  text-decoration: none;
  color:white;
  font-size:1.2rem;
}
/* .navElements a:active {
  color:blue;
  background:red;
} */
.navElements a:hover{
  /* color:rgb(59, 212, 136); */
  color:tomato;
  
  border-bottom:2px solid tomato;
  padding-bottom:0.6rem;
}


@media(max-width: 1000px){
  .navElements{
    z-index:1000;
    display:flex;
    flex-direction: column;
    position: absolute;
    position:fixed;
    top:4rem;
    left:0;
    background:red;
    width:3rem;
    height:100%;
    /* background-color: rgb(65, 60, 60); */
    /* background:#34DD9F; */
    background:linear-gradient(to left,rgb(34, 170, 163),rgb(40, 168, 207));
    box-shadow: 2px 2px 2px  black;
  }
  .navElements li{
    list-style: none;
    padding:0;
    margin:2.5rem -2.4rem 8rem;
     
  }
  .navElements a{
    text-decoration: none;
    color:black;
    font-size:1rem;
    text-align: center;
    font-weight:800;
    padding-left:3px;
  }
  .navElements a:hover{
    color:rgba(255, 255, 255, 0.61);
    padding-bottom:0.6rem;
    border-left:5px solid rgba(255, 255, 255, 0.61) ;
    border-bottom: none;
  }
  

}
@media(max-width: 500px){
  .navElements{
    width:1.5rem;
 }
 .navElements a{
   font-size:.85rem;
 }
}

